# Simple-RPi-AstroPhoto

./: .gitignore  Cargo.toml  README.md
Web/css/: base.css
Web/js/: container.js
src/: constants.rs  file.rs  main.rs  routes.rs  rpi_cam.rs
static/: index.html
static/css/: SimpleDataTable.css  base.css  color.css
static/js/: SimpleDataTable.js  base.js  container.js  modal.js
