[package]
name = "simple_rpi_astrophoto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rocket = "0.5.0-rc.1"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json", "serve"] } 
